setup postgrator, config.js, server.js

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
     "predeploy":"npm audit",
-    "deploy":"git push heroku master"
+    "deploy":"git push heroku master",
+    "migrate": "postgrator --config postgrator-config.js"
   },
   "repository": {
     "type": "git",
