--- a/example.env
+++ b/example.env
@@ -1,3 +1,4 @@
-﻿NODE_ENV=development
+NODE_ENV=development
 PORT=8000
 EXAMPLE="my_example_env_var"
+USDA_API_KEY="UagRUkxYwSoqkndlUZxctIfknr2Jolosk7p9O46g"
