postgrator and updated example.env, Readme

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "express-boilerplate",
+  "name": "symptom-tracker-server",
   "version": "1.0.0",
-  "description": "a template for express servers",
+  "description": "server for symptom tracker",
   "main": "src/server.js",
   "directories": {
     "test": "test"
@@ -11,7 +11,8 @@
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
     "predeploy": "npm audit",
-    "deploy": "git push heroku master"
+    "deploy": "git push heroku master",
+    "migrate": "postgrator --config postgrator-config.js"
   },
   "repository": {
     "type": "git",
@@ -29,13 +30,16 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "helmet": "^3.19.0",
+    "knex": "^0.19.4",
     "morgan": "^1.9.1",
+    "pg": "^7.12.1",
     "request-promise": "^4.2.4"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.1.4",
     "nodemon": "^1.19.1",
+    "postgrator-cli": "^3.3.0",
     "supertest": "^4.0.2"
   }
 }
