--- a/example.env
+++ b/example.env
@@ -1,4 +1,9 @@
 NODE_ENV=development
 PORT=8000
-EXAMPLE="my_example_env_var"
+ETZ='UTC'
+MIGRATION_DB_HOST=127.0.0.1
+MIGRATION_DB_PORT=5432
+MIGRATION_DB_NAME='name'
+MIGRATION_DB_USER=dunder-mifflin
+MIGRATION_DB_PASS
 USDA_API_KEY="UagRUkxYwSoqkndlUZxctIfknr2Jolosk7p9O46g"
