--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
   },
   "homepage": "https://github.com/thinkful-ei-emu/DavidExpress#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "helmet": "^3.19.0",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.19.4",
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
     "postgrator": "^3.10.2"
