--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "knex": "^0.19.4",
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
-    "postgrator": "^3.10.2"
+    "postgrator-cli": "^3.10.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
