starting helper for food tests

--- a/example.env
+++ b/example.env
@@ -1,9 +1,11 @@
 NODE_ENV=development
 PORT=8000
 ETZ='UTC'
+DATABASE_URL="postgresql://USERNAME@localhost/YOURDATABASENAME"
+TEST_DB_URL="postgresql://USERNAME@localhost/YOURDATABASENAME-test"
 MIGRATION_DB_HOST=127.0.0.1
 MIGRATION_DB_PORT=5432
 MIGRATION_DB_NAME='name'
-MIGRATION_DB_USER=dunder-mifflin
+MIGRATION_DB_USER='your username'
 MIGRATION_DB_PASS
 USDA_API_KEY="UagRUkxYwSoqkndlUZxctIfknr2Jolosk7p9O46g"
