--- a/package.json
+++ b/package.json
@@ -26,19 +26,20 @@
   },
   "homepage": "https://github.com/thinkful-ei-emu/DavidExpress#readme",
   "dependencies": {
+    "async-waterfall": "^0.1.5",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "helmet": "^3.19.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.4",
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
+    "postgrator-cli": "^3.3.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
-    "xss": "^1.0.6",
-    "jsonwebtoken": "^8.5.1",
-    "postgrator-cli": "^3.3.0"
+    "xss": "^1.0.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
